Atualização geral do projeto